--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,11 +13,45 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.col-md-10 {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.container-fluid {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
+.row {
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+
+.col-md-2 {
+  height: 100vh;
+}
+.col-md-10 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh; 
+  overflow: hidden;
+}
+
+.task-list-container {
+  flex-grow: 1;
+  overflow-y: auto; 
+  padding-bottom: 10px;
+  max-height: calc(100vh - 160px); 
+  min-height: 120px;  
+}
+
 .task-card {
   width: 300px;
   margin: auto;
@@ -33,7 +67,7 @@
 
 .header,
 .footer {
-  width: 100%; 
+  width: 100%;
 }
 
 a {
@@ -46,11 +80,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column; 
 }
 
 h1 {
@@ -89,6 +122,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
 .modal-overlay {
   position: fixed;
   top: 0;
